--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release = 17
+	// Minecraft 1.20 upwards uses Java 21.
+	it.options.release = 21
 }
 
 java {
