--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20.6
-	yarn_mappings=1.20.6+build.1
+	minecraft_version=1.21
+	yarn_mappings=1.21+build.2
 	loader_version=0.15.11
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.0.1+1.21
 	maven_group = issame
 	archives_base_name = material-beacons
 
 # Dependencies
-	fabric_version=0.98.0+1.20.6
+	fabric_version=0.100.3+1.21
