--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,10 +3,10 @@ name: Publish on GitHub, CurseForge & Modrinth
 on: [ workflow_dispatch ]
 
 env:
-  MINECRAFT_VERSION: 1.21.3
+  MINECRAFT_VERSION: 1.20.1
   JAVA_VERSION: 21
-  VERSION: 1.0.1+1.21.3
-  RELEASE_NAME: Material Beacons 1.0.1 for Minecraft 1.21.3
+  VERSION: 1.0.1+1.20.1
+  RELEASE_NAME: Material Beacons 1.0.1 for Minecraft 1.20.1
   MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
   CURSEFORGE_TOKEN: ${{ secrets.PUBLISH_CURSEFORGE_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
@@ -47,6 +47,7 @@ jobs:
 
           modrinth-id: QLLz3XcD
           modrinth-token: "${{env.MODRINTH_TOKEN}}"
+          modrinth-featured: false
 
           github-tag: "v${{env.VERSION}}"
           github-token: "${{env.GITHUB_TOKEN}}"
