Update version and related files

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # Every field you add must be added to buildSrc/src/main/groovy/multiloader-common.gradle expandProps map.
 
 # Project
-version=1.1.0+1.21.6
+version=1.1.0+1.21.5
 group=issame
 java_version=21
 
@@ -11,10 +11,12 @@ minecraft_version=1.21.5
 mod_name=Material Beacons
 mod_author=IssaMe
 mod_id=material_beacons
-license=CC0-1.0
-credits=
+license=MIT
+credits=jaredlll08 for the MultiLoader-Template
 description=Changes the effect of beacons to be based on the material used to construct them.
 minecraft_version_range=[1.21.5, 1.22)
+sources=https://github.com/Joel-Paul/Material-Beacons
+issues=https://github.com/Joel-Paul/Material-Beacons/issues
 ## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
 ## https://projects.neoforged.net/neoforged/neoform
 neo_form_version=1.21.5-20250325.162830
