--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # Every field you add must be added to buildSrc/src/main/groovy/multiloader-common.gradle expandProps map.
 
 # Project
-version=1.1.0+1.21.5
+version=1.1.0
 group=issame
 java_version=21
 
