--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,23 @@
 name: Publish on GitHub, CurseForge & Modrinth
 
-on: [ workflow_dispatch ]
+on:
+  workflow_dispatch:
+    inputs:
+      loader:
+        description: "Which loader do you want to publish?"
+        required: true
+        default: "all"
+        type: choice
+        options:
+          - "all"
+          - "fabric"
+          - "neoforge"
 
 env:
   MINECRAFT_VERSION: 1.21.5
   JAVA_VERSION: 21
-  VERSION: 1.0.1+1.21.5
-  RELEASE_NAME: Material Beacons 1.0.1 for Minecraft 1.21.5
+  VERSION: 1.1.0+1.21.5
+  RELEASE_NAME: Material Beacons 1.1.0 for Minecraft 1.21.5
   MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
   CURSEFORGE_TOKEN: ${{ secrets.PUBLISH_CURSEFORGE_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
@@ -15,48 +26,55 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  publish:
+    if: ${{ github.event.inputs.loader == 'all' || contains(matrix.loader, github.event.inputs.loader) }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        loader: ["fabric", "neoforge"]
+
+    name: Build and Publish (${{ matrix.loader }})
     steps:
       - name: Check Environment Variables
         run: env
 
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: true
 
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: "temurin"
-          java-version: 21
+          java-version: "${{ env.JAVA_VERSION }}"
 
       - name: Make Gradle Wrapper Executable
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
 
-      - name: Build
-        run: ./gradlew clean build
+      - name: Build (${{ matrix.loader }})
+        run: ./gradlew clean :${{ matrix.loader }}:build
 
-      - name: Publish (CurseForge/Modrinth/GitHub)
+      - name: Publish (${{ matrix.loader }})
         uses: Kir-Antipov/mc-publish@v3.3
         with:
           curseforge-id: 1025875
-          curseforge-token: "${{env.CURSEFORGE_TOKEN}}"
+          curseforge-token: "${{ env.CURSEFORGE_TOKEN }}"
 
           modrinth-id: QLLz3XcD
-          modrinth-token: "${{env.MODRINTH_TOKEN}}"
+          modrinth-token: "${{ env.MODRINTH_TOKEN }}"
 
-          github-tag: "v${{env.VERSION}}"
-          github-token: "${{env.GITHUB_TOKEN}}"
+          github-tag: "v${{ env.VERSION }}"
+          github-token: "${{ env.GITHUB_TOKEN }}"
           github-generate-changelog: true
 
-          name: "${{env.RELEASE_NAME}}"
-          version: "${{env.VERSION}}"
+          name: "${{ env.RELEASE_NAME }}"
+          version: "${{ env.VERSION }}"
           version-type: release
           changelog-file: CHANGES.md
 
-          loaders: fabric
-          game-versions: "${{env.MINECRAFT_VERSION}}"
-          java: "${{env.JAVA_VERSION}}"
+          java: "${{ env.JAVA_VERSION }}"
+          files: |
+            ${{ matrix.loader }}/build/libs/!(*-@(dev|sources|javadoc)).jar
+            ${{ matrix.loader }}/build/libs/*-@(dev|sources|javadoc).jar
