--- a/gradle.properties
+++ b/gradle.properties
@@ -33,9 +33,12 @@ forge_version=55.0.1
 forge_loader_version_range=[55,)
 
 # NeoForge
-neoforge_version=21.5.66-beta
+neoforge_version=21.5.75
 neoforge_loader_version_range=[4,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Just Enough Items
+jei_version=21.3.1.19
